assets/css/main.scss
---
---

@use "common";
@use "imageHover";

body {
    font-family: common.$base-font-family;
    background: #F5F5F0;

    padding: 0 2ch;
    margin: 30px auto 60px;
    max-width: 1000px;

    @media all and (max-width: 699px) {
        font-size: 4vw;
    }
}

#nav > a {
    margin-right: 1ch;

    &:last-of-type {
        margin-right: 0;
    }
}

a {
    color: black;
    font-weight: bold;
}

p {
    // margin: 0 0 25pt 0;
    text-align: justify;
    word-wrap: break-word;
    overflow-wrap: break-word;
    word-break: break-word;
}

h1, h2 {
    font-size: inherit;
    text-transform: uppercase;
    margin-bottom: 0;
    margin-top: 30px;
}

img {
    border: none;
    width: 100%;
    height: auto;
    max-width: 100%;
}

header {
    display: flex;
    align-items: center;
    flex-direction: column;

    margin-bottom: 45px;
}

#intro {
    margin-bottom: 2em;

    h1, h2 {
        margin-top: unset;
    }

    h1 {
        font-size: 135%;
    }

    h2 {
        margin-left: 1em;
        margin-top: 0.25em;
        text-transform: none;

        &:before {
            content: '> ';
        }
    }

    .title {
        margin-bottom: 1em;
    }

    .credit {
        font-style: italic;
        margin-bottom: 1em;
    }

    .tags {
        font-size: 90%;
        margin-bottom: 1.5em;

        .tag {
            text-decoration: none;
            box-shadow: inset 0 -1px 0 white, inset 0 -2px 0 black;
        }
    }
}

content {
    margin-bottom: 30px;
}

.scryfall-hover {
    text-decoration-style: dotted;
}

#set-list {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin-bottom: 45px;

    a {
        flex: 1;
        min-width: 125px;
        max-width: 125px;

        text-align: center;
        text-decoration: none;
    }

    i {
        display: block;
        margin: 10px auto 5px;
    }
}

#promo-list {
    a:after {
        content: '\a';
        white-space: pre;
    }
}

#restricted-list {
    a:after {
        content: '\a';
        white-space: pre;
    }
}

#restricted-images {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-column-gap: 1vw;
    grid-row-gap: 1vw;
    justify-items: center;

    @media all and (max-width: 699px) {
        grid-template-columns: repeat(2, 1fr);
    }
}

#post-list {
    margin-top: 1em;

    > div {
        margin-bottom: 2ch;
    }

    .date {
        margin-right: 1ch;
    }

    .excerpt {
        font-style: italic;

        p {
            margin-top: 1ch;
            margin-left: 1ch;
            font-size: 90%;
        }
    }
}

#footer {
    margin-top: 50px;
    text-align: center;
}

table {
    border-collapse: collapse;

    th {
        border-bottom: 1px solid black;
    }

    th, td {
        padding: 0 8px;
        text-align: left;
    }
}

.deck {
    display: flex;
    margin-bottom: 5em;

    > div {
        flex-grow: 1;
        flex-basis: 150px;
        border-right: 5px solid transparent;
        border-bottom: 10px solid transparent;
    }

    @media (max-width: 1024px) {
        flex-direction: column;

        > div {
            flex-basis: 0;
        }
    }
}

.image-set {
    display: flex;
    flex-direction: column;

    img {
        padding-top: 0.2em;
        padding-bottom: 0.2em;
    }
}

.image-pair {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    max-width: 100%;

    img {
        width: 50%;

        @media (max-device-width: 600px) {
            width: auto;
        }
    }
}

.blink {
    animation: blinking 1s step-start infinite;
}

@keyframes blinking {
    50% {
        opacity: 0;
    }
}

.github {
    opacity: 1;
    transition: 0.5s ease-in-out;

    &:hover {
        opacity: 0.5;
    }
}

#navigation {
    margin: 3em 0;

    .label {
        font-size: 1.25em;
    }

    .prev {
        text-align: left;
    }

    .next {
        text-align: right;
    }

    .prev, .next {
        margin: 3em 0;
    }
}

